# intervention_learning

./: .gitignore  README.md  code_review.md  constraints-jax-cpu.txt  constraints-jax-cu12.txt  debug.md  pyproject.toml  requirements-cpu.txt  requirements-cuda12.txt  requirements-jax-cpu.txt  requirements-jax-cu12.txt  requirements.txt
config/: dagger.yaml  expert_q_gap_square.yaml  smoke_bc_critic_square.yaml  smoke_dagger_square.yaml  smoke_expert_q_gap_square.yaml  smoke_residual_square.yaml  smoke_residual_td3_square.yaml  tool_hang_residual_bcflow_top200_mixed50_shiftm1_nstep5_scale01_actorln_off_seed0_2m.yaml  tool_hang_residual_bcflow_top200_mixed50_shiftm1_nstep5_scale01_utd4_bc01_seed0_2m.yaml  tool_hang_residual_bcflow_top200_mixed50_shiftm1_nstep5_scale1_seed0_2m.yaml  tool_hang_residual_bcflow_top200_mixed50_shiftm1_nstep5_seed0_2m.yaml  tool_hang_residual_bcflow_top200_smoke.yaml  tool_hang_residual_rlpd_bcflow_top200_mixed50_shiftm1_nstep5_scale02_bc01_lr1e4_warmup01_seed0_2m_criticfix.yaml  tool_hang_residual_td3_bcflow_top200_mixed50_shiftm1_nstep5_scale02_bc01_actorlr5e5_warmup01_seed0_2m.yaml  tool_hang_residual_td3_bcflow_top200_mixed50_shiftm1_nstep5_scale02_bc01_actorlr5e5_warmup01_seed0_2m_criticfix.yaml  tool_hang_residual_td3_bcflow_top200_mixed50_shiftm1_nstep5_scale02_seed0_2m.yaml  tool_hang_residual_td3_scale02_ckpt1500k_expert_random_gate_smoke.yaml  tool_hang_rlpd_bc01_mixed50_shiftm1_nstep5_expertbc_seed0_2m.yaml  tool_hang_rlpd_bc03_mixed50_shiftm1_nstep5_expertbc_seed0_2m.yaml  tool_hang_rlpd_bc03_online.yaml  (+5 more)
docs/: DAGGER_BASELINE.md  (+21 more)
(+98 files in other folders)
