[project]
name = "intervention-learning"
version = "0.1.0"
description = "Intervention learning experiments built from a minimal RLPD/SAC pipeline."
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["il*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
